--- a/hh.html
+++ b/hh.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8" />
-<title>فتح دفعات iframes وتراكمها</title>
+<title>فتح دفعات iframes بحجم مخصص</title>
 <style>
   body { font-family: Arial, sans-serif; direction: rtl; padding: 20px; }
   label { display: block; margin-top: 10px; }
@@ -15,13 +15,7 @@
   }
   iframe {
     border: 1px solid #ccc;
-    width: 150px;
-    height: 100px;
     flex-shrink: 0;
-    resize: both;
-    overflow: auto;
-    min-width: 100px;
-    min-height: 80px;
   }
   #status {
     margin-top: 20px;
@@ -39,23 +33,33 @@
 </style>
 </head>
 <body>
-  <h1>فتح دفعات iframes وتراكمها</h1>
+  <h1>فتح دفعات iframes بحجم مخصص</h1>
+
   <label>رابط الموقع:
     <input type="text" id="url" placeholder="https://example.com" />
   </label>
   <label>عدد النوافذ الكلي:
-    <input type="number" id="totalCount" min="1" value="100" />
+    <input type="number" id="totalCount" min="1" value="30" />
   </label>
-  <label>حجم الدفعة (عدد النوافذ التي تفتح مرة واحدة):
+  <label>حجم الدفعة (كم تفتح مرة واحدة):
     <input type="number" id="batchSize" min="1" max="50" value="10" />
   </label>
-  <label>مدة الانتظار بين فتح دفعة وأخرى (بالثواني):
+  <label>مدة الانتظار بين الدُفعات (بالثواني):
     <input type="number" id="waitTime" min="1" value="5" />
   </label>
+  <label>عرض الـ iframe (بالبكسل):
+    <input type="number" id="iframeWidth" min="50" value="150" />
+  </label>
+  <label>ارتفاع الـ iframe (بالبكسل):
+    <input type="number" id="iframeHeight" min="50" value="100" />
+  </label>
+
   <button id="startBtn">ابدأ الفتح</button>
   <button id="closeAllBtn" style="display:none;">أغلق جميع النوافذ</button>
+
   <div id="status"></div>
   <div id="framesContainer"></div>
+
 <script>
   const startBtn = document.getElementById('startBtn');
   const closeAllBtn = document.getElementById('closeAllBtn');
@@ -65,20 +69,25 @@
   let currentCount = 0;
   let timer = null;
 
-  function openBatch(url, batchSize, totalCount, waitTime) {
+  function openBatch(url, batchSize, totalCount, waitTime, width, height) {
     const remaining = totalCount - currentCount;
     const toOpen = Math.min(batchSize, remaining);
-    for(let i = 0; i < toOpen; i++) {
+
+    for (let i = 0; i < toOpen; i++) {
       const iframe = document.createElement('iframe');
       iframe.src = url;
       iframe.sandbox = "allow-scripts allow-same-origin";
+      iframe.style.width = width + 'px';
+      iframe.style.height = height + 'px';
       framesContainer.appendChild(iframe);
       currentCount++;
     }
+
     statusDiv.textContent = `تم فتح ${currentCount} من ${totalCount} نوافذ.`;
+
     if (currentCount < totalCount) {
       timer = setTimeout(() => {
-        openBatch(url, batchSize, totalCount, waitTime);
+        openBatch(url, batchSize, totalCount, waitTime, width, height);
       }, waitTime * 1000);
     } else {
       statusDiv.textContent = `تم فتح جميع النوافذ (${totalCount}) بنجاح.`;
@@ -95,27 +104,29 @@
     framesContainer.innerHTML = '';
     closeAllBtn.style.display = 'none';
     statusDiv.textContent = '';
+
     const url = document.getElementById('url').value.trim();
     const totalCount = parseInt(document.getElementById('totalCount').value);
     const batchSize = parseInt(document.getElementById('batchSize').value);
     const waitTime = parseInt(document.getElementById('waitTime').value);
+    const width = parseInt(document.getElementById('iframeWidth').value);
+    const height = parseInt(document.getElementById('iframeHeight').value);
+
     if (!url) {
       statusDiv.textContent = 'يرجى إدخال رابط صحيح.';
       return;
     }
-    if (isNaN(totalCount) || totalCount < 1) {
-      statusDiv.textContent = 'العدد الكلي يجب أن يكون على الأقل 1.';
+
+    if (isNaN(totalCount) || totalCount < 1 ||
+        isNaN(batchSize) || batchSize < 1 ||
+        isNaN(waitTime) || waitTime < 1 ||
+        isNaN(width) || width < 50 ||
+        isNaN(height) || height < 50) {
+      statusDiv.textContent = 'يرجى التحقق من القيم المدخلة.';
       return;
     }
-    if (isNaN(batchSize) || batchSize < 1 || batchSize > 50) {
-      statusDiv.textContent = 'حجم الدفعة يجب أن يكون بين 1 و 50.';
-      return;
-    }
-    if (isNaN(waitTime) || waitTime < 1) {
-      statusDiv.textContent = 'مدة الانتظار يجب أن تكون على الأقل ثانية واحدة.';
-      return;
-    }
-    openBatch(url, batchSize, totalCount, waitTime);
+
+    openBatch(url, batchSize, totalCount, waitTime, width, height);
   });
 
   closeAllBtn.addEventListener('click', () => {
